--- a/im_wasted/index.html
+++ b/im_wasted/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
     <header>
         <nav>
             <div class="container">
@@ -18,7 +20,7 @@
             </div>
         </nav>
 
-        <h1 class="big-title translate" data-speed="0.1">Discover.</h1>
+        <h1 class="big-title translate" data-speed="0.1">WASTED</h1>
 
         <img src="img/person.png" class="person translate" data-speed="-0.25" alt="">
         <img src="img/mountain1.png" class="mountain1 translate" data-speed="-0.2" alt="">
@@ -26,6 +28,7 @@
         <img src="img/mountain3.png" class="mountain3 translate" data-speed="0.3" alt="">
         <img src="img/sky.png" class="sky translate" data-speed="0.5" alt="">
     </header>
+
 
     <section>
         <div class="shadow"></div>
@@ -44,7 +47,7 @@
             </div>
         </div>
     </section>
-    
+
     <script src="app.js"></script>
 </body>
 </html>
