--- a/im_wasted/index.html
+++ b/im_wasted/index.html
@@ -22,16 +22,18 @@
 
         <h1 class="big-title translate" data-speed="0.1">WASTED</h1>
 
-        <img src="img/person.png" class="person translate" data-speed="-0.25" alt="">
+    <!--    <img src="img/person.png" class="person translate" data-speed="-0.25" alt="">
         <img src="img/mountain1.png" class="mountain1 translate" data-speed="-0.2" alt="">
         <img src="img/mountain2.png" class="mountain2 translate" data-speed="0.4" alt="">
         <img src="img/mountain3.png" class="mountain3 translate" data-speed="0.3" alt="">
-        <img src="img/sky.png" class="sky translate" data-speed="0.5" alt="">
+      -->
+        <img src="img/bg.png" class="sky translate" data-speed="0.5" alt="">
     </header>
 
 
     <section>
-        <div class="shadow"></div>
+    <!--    <div class="shadow"></div>
+
 
         <div class="container">
             <div class="content opacity">
@@ -42,10 +44,12 @@
                 <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque officiis quos expedita ipsa, a quidem inventore voluptates debitis accusamus tenetur qui et voluptas dicta, culpa earum, doloribus odio consectetur consequuntur soluta quasi nobis! Deserunt voluptatum reiciendis iure expedita sequi quisquam laboriosam temporibus exercitationem.</p>
             </div>
 
+
             <div class="imgContainer opacity">
                 <img src="img/image.jpg" alt="">
             </div>
         </div>
+          -->
     </section>
 
     <script src="app.js"></script>
